[gd_scene load_steps=7 format=2]

[ext_resource path="res://pic/shitou.png" type="Texture" id=1]
[ext_resource path="res://pic/bu.png" type="Texture" id=2]
[ext_resource path="res://pic/jiandao.png" type="Texture" id=3]
[ext_resource path="res://fonts/字魂石头体.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://scripts/mora.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
size = 36
font_data = ExtResource( 4 )

[node name="mora" type="Node2D"]
script = ExtResource( 5 )

[node name="bottom_plane" type="Node2D" parent="."]

[node name="jiandao" type="TextureButton" parent="bottom_plane"]
margin_left = 53.0
margin_top = 438.0
margin_right = 381.0
margin_bottom = 755.0
rect_scale = Vector2( 0.3, 0.3 )
texture_normal = ExtResource( 3 )

[node name="shitou" type="TextureButton" parent="bottom_plane"]
margin_left = 196.0
margin_top = 438.0
margin_right = 517.0
margin_bottom = 763.0
rect_scale = Vector2( 0.3, 0.3 )
texture_normal = ExtResource( 1 )

[node name="bu" type="TextureButton" parent="bottom_plane"]
margin_left = 330.0
margin_top = 438.0
margin_right = 649.0
margin_bottom = 733.0
rect_scale = Vector2( 0.3, 0.3 )
texture_normal = ExtResource( 2 )

[node name="mora_timer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="close_timer" type="Timer" parent="."]
wait_time = 2.0

[node name="result_plane" type="Node2D" parent="."]
visible = false

[node name="Sprite" type="Sprite" parent="result_plane"]
position = Vector2( 234, 167 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )

[node name="Sprite2" type="Sprite" parent="result_plane"]
position = Vector2( 240, 527 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )

[node name="win_label" type="Label" parent="result_plane"]
margin_left = 106.0
margin_top = 331.0
margin_right = 368.0
margin_bottom = 375.0
custom_fonts/font = SubResource( 1 )
text = "先手"
align = 1

[connection signal="pressed" from="bottom_plane/jiandao" to="." method="_on_jiandao_pressed"]
[connection signal="pressed" from="bottom_plane/shitou" to="." method="_on_shitou_pressed"]
[connection signal="pressed" from="bottom_plane/bu" to="." method="_on_bu_pressed"]
[connection signal="timeout" from="mora_timer" to="." method="_on_mora_timer_timeout"]
[connection signal="timeout" from="close_timer" to="." method="_on_close_timer_timeout"]
